--- a/templates/tenman/user_profile.html
+++ b/templates/tenman/user_profile.html
@@ -217,37 +217,37 @@
                     <table class="table">
                         <thead class="thead-dark">
                           <tr>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="HLTV Rating">HLTV</div></th>
-                            <th><div data-toggle="tooltip" data-placement="top" title="Kills/Death Ratio">K/D</div></th>
-                            <th><div data-toggle="tooltip" data-placement="top" title="Kills">K</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Assists">A</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Deaths">D</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Flash Assists">FA</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Clutch kills">CK</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Bombs planted">BP</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Bombs defused">BD</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Average Damage pr Round">ADR</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Headshot percentage">HS%</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Wins">W</div></th>
-                            <th scope="col"><div data-toggle="tooltip" data-placement="top" title="Losses">L</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="HLTV Rating">HLTV</div></th>
+                            <th class="text-center"><div data-toggle="tooltip" data-placement="top" title="Kills/Death Ratio">K/D</div></th>
+                            <th class="text-center"><div data-toggle="tooltip" data-placement="top" title="Kills">K</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Assists">A</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Deaths">D</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Flash Assists">FA</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Clutch kills">CK</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Bombs planted">BP</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Bombs defused">BD</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Average Damage pr Round">ADR</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Headshot percentage">HS%</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Wins">W</div></th>
+                            <th scope="col" class="text-center"><div data-toggle="tooltip" data-placement="top" title="Losses">L</div></th>
                                                         
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <td>{{ player.get_hltv_rating() }}</td>
-                            <td>{{ player.get_kd_ratio() }}</td>
-                            <td>{{ player.get_kills() }}</td>
-                            <td>{{ player.get_assists() }}</td>
-                            <td>{{ player.get_deaths() }}</td>
-                            <td>{{ player.get_flash_assists() }}</td>
-                            <td>{{ player.get_clutch_kills() }}</td>
-                            <td>{{ player.get_bombs_planted() }}</td>
-                            <td>{{ player.get_bombs_defused() }}</td>                            
-                            <td>{{ player.get_adr() }}</td>
-                            <td>{{ 100*(player.get_hs_percentage())}}%</td>
-                            <td>{{ player.get_wins() }}</td>
-                            <td>{{ player.get_losses()}}</td>
+                            <td class="text-center">{{ player.get_hltv_rating() }}</td>
+                            <td class="text-center">{{ player.get_kd_ratio() }}</td>
+                            <td class="text-center">{{ player.get_kills() }}</td>
+                            <td class="text-center">{{ player.get_assists() }}</td>
+                            <td class="text-center">{{ player.get_deaths() }}</td>
+                            <td class="text-center">{{ player.get_flash_assists() }}</td>
+                            <td class="text-center">{{ player.get_clutch_kills() }}</td>
+                            <td class="text-center">{{ player.get_bombs_planted() }}</td>
+                            <td class="text-center">{{ player.get_bombs_defused() }}</td>                            
+                            <td class="text-center">{{ player.get_adr() }}</td>
+                            <td class="text-center">{{ 100*(player.get_hs_percentage())}}%</td>
+                            <td class="text-center">{{ player.get_wins() }}</td>
+                            <td class="text-center">{{ player.get_losses()}}</td>
                           </tr>
                           
                         </tbody>
