--- a/templates/tenman/user_profile.html
+++ b/templates/tenman/user_profile.html
@@ -6,7 +6,7 @@
 {% extends "tenman/navbar.html" %}
 {% block body %}
 
-<div class="container">
+<div class="container nolink">
     <div class="main-body">          
     
           <div class="row gutters-sm">
@@ -287,7 +287,7 @@
   });
 </script>
 <style>
-  a {
+ .nolink a {
     color:inherit;
   }
     #clickableIcon {
