--- a/templates/tenman/seasons.html
+++ b/templates/tenman/seasons.html
@@ -22,6 +22,7 @@
                     Select season<span class="caret"></span>
                 </button>
                 <ul id="demolist" class="dropdown-menu">
+                    <li><a href="#">February 2021</a></li>
                     <li><a href="#">January 2021</a></li>
                     <li><a href="#">December 2020</a></li>
                     <li><a href="#">November 2020</a></li>
